--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "sequelize": "^5.15.2"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "chai": "^4.2.0",
+    "nodemon": "^1.19.1"
   },
   "scripts": {
+    "start": "node application/controller.js",
     "test": "npm run test"
   },
   "repository": {
