--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nodemon": "^1.19.1"
   },
   "scripts": {
-    "start": "node application/controller.js",
+    "start": "nodemon application/controller.js",
     "test": "npm run test"
   },
   "repository": {
