--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pd-backend",
   "version": "1.0.0",
-  "description": "Back End Development Skill Assessment: Organisation Relations",
-  "main": "index.js",
+  "description": "Back End Development Skill Assessment: Organization Relationships",
+  "main": "application/controller.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -10,19 +10,18 @@
     "sequelize": "^5.15.2"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
     "nodemon": "^1.19.1"
   },
   "scripts": {
-    "start": "nodemon application/controller.js",
-    "test": "npm run test"
+    "start": "node application/controller.js",
+    "watch": "nodemon application/controller.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jmjcabuyadao/pd-backend.git"
   },
   "author": "J. Cabuyadao <jmjcabuyadao@gmail.com>",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/jmjcabuyadao/pd-backend/issues"
   },
